--- a/src/GeneralLabSolutions.Application/GeneralLabSolutions.Application.csproj
+++ b/src/GeneralLabSolutions.Application/GeneralLabSolutions.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\GeneralLabSolutions.Domain\GeneralLabSolutions.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
